# Dialysismachine

./: ActionBar.qml  BlueButton.qml  CMakeLists.txt  DisplayTabView.qml  Footer.qml  Layeredbutton.qml  Main.qml  MeasurementRect.qml  PostTreatmentUI.qml  Redrectangle.qml  main.cpp  resources.qrc
